<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>linebot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="even@todo.todo">even</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- C++ node (if you have one) -->
  <depend>rclcpp</depend>

  <!-- Gazebo Sim (gz) + ROS integration -->
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>

  <!-- Publishes robot_description from URDF -->
  <exec_depend>robot_state_publisher</exec_depend>

  <!-- Optional: only if you use xacro -->
  <!-- <exec_depend>xacro</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>

    <gazebo_ros gazebo_model_path="${prefix}/../"/>
    
  </export>
</package>